opens javax.ws.rs.core to java.xml.bind in tests
Allows JAXB to reflectively access JAX-RS in surefire plugin.

Signed-off-by: Markus KARG <markus@headcrashing.eu>